--- a/index.html
+++ b/index.html
@@ -410,13 +410,14 @@
           <div class="carousel-item">
             <div class="row">
               <div class="col-lg-2 col-md-3 cc-reference-header"><img src="b.jpeg" alt="Image"/>
-                <div class="h5 pt-2">Skillsbuild</div>
-                <p class="category">IBM</p>
+                <div class="h5 pt-2">SkillsBuild</div>
+                <p class="category">Badges</p>
               </div>
               <div class="col-lg-10 col-md-9">
-                <p>- Completed 50+ Skill Build Certificates of Introduction to HTML5, Cloud Computing, HTML5 & Css3, Tuples and Dictionaries, Basics of Python Programming, MongoDb Introduction, Introduction Of SQL, RDBMS Fundamentals, PHP Basics, Installing MySql and Php packages, Learn by Doing: HTML , Web Developer Foundation, Welcome to coding Land, and Many more. </p>
-            <p>- CISCO Certification of Introduction to Cyber Security</p>
-			<p>- SkillsBuild badges of Web Developer Foundations & Introduction to Web Devlopment</p>
+                <p> -Web Developer Foundations</p>
+			<p>- Introduction to Web Devlopment</p>
+		      <p>- CyberSecurity Fundamentals</p>
+		      <p>- Data Science Foundations - Level 1</p>
 			</div>
             </div>
           </div>
@@ -427,13 +428,8 @@
                 <p class="category">SkillsBuild </p>
               </div>
               <div class="col-lg-10 col-md-9">
-                <p>- Object-oriented Programming & Design Basics<br>
-                  - Data Persistence & Validation<br>
-                  - Introduction to HTML5 Media,<br>
-                  - Java Programming: Introduction,<br>
-                  - Functions in Python:Introduction,<br>
-                  - API Development:Framework Security,<br>
-                  - HTML5 Layout with CSS3.</p>
+                <p>- Completed 50+ Skill Build Certificates of Introduction to HTML5, Cloud Computing, HTML5 & Css3, Tuples and Dictionaries, Basics of Python Programming, MongoDb Introduction, Introduction Of SQL, RDBMS Fundamentals, PHP Basics, Installing MySql and Php packages, Learn by Doing: HTML , Web Developer Foundation, Welcome to coding Land, and Many more. </p>
+            <p>- CISCO Certification of Introduction to Cyber Security</p>
               </div>
             </div>
           </div>
