--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
               </div>
               <div class="col-lg-10 col-md-9">
                 <p> -Web Developer Foundations</p>
-			<p>- Introduction to Web Devlopment</p>
+			<p>- Introduction to Web Development</p>
 		      <p>- CyberSecurity Fundamentals</p>
 		      <p>- Data Science Foundations - Level 1</p>
 			</div>
