--- a/index.html
+++ b/index.html
@@ -418,6 +418,9 @@
 			<p>- Introduction to Web Development</p>
 		      <p>- CyberSecurity Fundamentals</p>
 		      <p>- Data Science Foundations - Level 1</p>
+		      <p>- Hadoop Foundations - Level 1</p>
+		      <p>- Python for Data Science</p>
+		      <p>- Spark - Level 1</p>
 			</div>
             </div>
           </div>
