--- a/index.html
+++ b/index.html
@@ -414,13 +414,13 @@
                 <p class="category">Badges</p>
               </div>
               <div class="col-lg-10 col-md-9">
-                <p> -Web Developer Foundations</p>
-			<p>- Introduction to Web Development</p>
-		      <p>- CyberSecurity Fundamentals</p>
-		      <p>- Data Science Foundations - Level 1</p>
-		      <p>- Hadoop Foundations - Level 1</p>
-		      <p>- Python for Data Science</p>
-		      <p>- Spark - Level 1</p>
+                <p> -Web Developer Foundations<br>
+			<p>- Introduction to Web Development<br>
+		      - CyberSecurity Fundamentals<br>
+		      - Data Science Foundations - Level 1<br>
+		      - Hadoop Foundations - Level 1<br>
+		      - Python for Data Science<br>
+		      - Spark - Level 1</p>
 			</div>
             </div>
           </div>
