--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
               </div>
               <div class="col-lg-10 col-md-9">
                 <p> -Web Developer Foundations<br>
-			<p>- Introduction to Web Development<br>
+		- Introduction to Web Development<br>
 		      - CyberSecurity Fundamentals<br>
 		      - Data Science Foundations - Level 1<br>
 		      - Hadoop Foundations - Level 1<br>
