--- a/index.html
+++ b/index.html
@@ -420,7 +420,8 @@
 		      - Data Science Foundations - Level 1<br>
 		      - Hadoop Foundations - Level 1<br>
 		      - Python for Data Science<br>
-		      - Spark - Level 1</p>
+		      - Spark - Level 1<br>
+		      -Big Data Foundations - Level 1</p>
 			</div>
             </div>
           </div>
