--- a/index.html
+++ b/index.html
@@ -414,14 +414,15 @@
                 <p class="category">Badges</p>
               </div>
               <div class="col-lg-10 col-md-9">
-                <p> -Web Developer Foundations<br>
+                <p> - Web Developer Foundations<br>
 		- Introduction to Web Development<br>
 		      - CyberSecurity Fundamentals<br>
 		      - Data Science Foundations - Level 1<br>
 		      - Hadoop Foundations - Level 1<br>
 		      - Python for Data Science<br>
 		      - Spark - Level 1<br>
-		      -Big Data Foundations - Level 1</p>
+		      - Big Data Foundations - Level 1<br>
+		      - Introduction to Data Analysis</p>
 			</div>
             </div>
           </div>
